Minor content fix

--- a/homepage.html
+++ b/homepage.html
@@ -1,27 +1,27 @@
 <section>
     <h2>What</h2>
     <div>
-        <p>Yesod is a Haskell web framework for productive development of type-safe, RESTful, high performance web applications. <a href="/page/about" class="GENTICS_link_pointer">Learn more.</a></p>
+        <p>Yesod is a Haskell web framework for productive development of type-safe, RESTful, high performance web applications. <a href="/page/about">Learn more.</a></p>
     </div>
 </section>
 <section>
     <h2>Getting Started</h2>
     <div>
-        <p>If you are new to Yesod, you should start off with <a href="/page/five-minutes" class="GENTICS_link_text">the five minute start instructions</a>. The <a href="/page/screencasts">screencasts</a> give a nice introduction to some of the advanced concepts, and <a href="/book" class="GENTICS_link_text">the book</a> is the recommended approach to learning Yesod. Ask the <a href="/page/community" class="GENTICS_link_text">community</a> for help.</p>
+        <p>If you are new to Yesod, you should start off with <a href="/page/five-minutes">the five minute start instructions</a>. The <a href="/page/screencasts">screencasts</a> give a nice introduction to some of the advanced concepts, and <a href="/book">the book</a> is the recommended approach to learning Yesod. Ask the <a href="/page/community">community</a> for help.</p>
     </div>
 </section>
 <section>
     <h2>Where</h2>
     <div>
         <p>Use the scaffolding tool to quickly
-        <a href="/page/five-minutes" class="GENTICS_link_pointer">
+        <a href="/page/five-minutes">
             create your first Yesod project
         </a>
         </p>
         <p>
         Get the source:
         </p>
-        <p><code>$ git clone <a href="https://github.com/yesodweb/yesod" class="GENTICS_link_text">https://github.com/yesodweb/yesod.git</a></code></p>
+        <p><code>$ git clone <a href="https://github.com/yesodweb/yesod">https://github.com/yesodweb/yesod.git</a></code></p>
     </div>
 </section>
 
@@ -29,11 +29,11 @@
     <h2>Quick Links</h2>
     <div>
         <ul>
-            <li><a href="/page/about" class="GENTICS_link_text">About: Why Yesod?</a></li>
-            <li><a href="/page/testimonials" class="GENTICS_link_text">Testimonials</a></li>
-            <li><a href="/page/screencasts" class="GENTICS_link_text">Screencasts</a></li>
-            <li><a href="/page/five-minutes" class="GENTICS_link_text">Get Started</a></li>
-            <li><a href="/page/community" class="GENTICS_link_text">Community resources</a></li><li><a href="http://www.yesodweb.com/wiki/API%20Documentation" target class>API Docs (Haddocks)</a><br class="GENTICS_ephemera"></li>
+            <li><a href="/page/about">About: Why Yesod?</a></li>
+            <li><a href="/page/testimonials">Testimonials</a></li>
+            <li><a href="/page/screencasts">Screencasts</a></li>
+            <li><a href="/page/five-minutes">Get Started</a></li>
+            <li><a href="/page/community">Community resources</a></li><li><a href="http://www.yesodweb.com/wiki/API%20Documentation" target class>API Docs (Haddocks)</a></li>
         </ul>
     </div>
 </section>
