Fix a link on the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -33,7 +33,8 @@
             <li><a href="/page/testimonials">Testimonials</a></li>
             <li><a href="/page/screencasts">Screencasts</a></li>
             <li><a href="/page/five-minutes">Get Started</a></li>
-            <li><a href="/page/community">Community resources</a></li><li><a href="http://www.yesodweb.com/wiki/API%20Documentation" target class>API Docs (Haddocks)</a></li>
+            <li><a href="/page/community">Community resources</a></li>
+            <li><a href="/wiki/API%20Documentation">API Docs (Haddocks)</a></li>
         </ul>
     </div>
 </section>
