--- a/homepage.html
+++ b/homepage.html
@@ -1,40 +1,35 @@
-<section>
-    <h2>What</h2>
-    <div>
-        <p>Yesod is a Haskell web framework for productive development of type-safe, RESTful, high performance web applications. <a href="/page/about">Learn more.</a></p>
-    </div>
-</section>
-<section>
-    <h2>Getting Started</h2>
-    <div>
-        <p>If you are new to Yesod, you should start off with <a href="/page/five-minutes">the five minute start instructions</a>. The <a href="/page/screencasts">screencasts</a> give a nice introduction to some of the advanced concepts, and <a href="/book">the book</a> is the recommended approach to learning Yesod. Ask the <a href="/page/community">community</a> for help.</p>
-    </div>
-</section>
-<section>
-    <h2>Where</h2>
-    <div>
-        <p>Use the scaffolding tool to quickly
-        <a href="/page/five-minutes">
-            create your first Yesod project
-        </a>
-        </p>
-        <p>
-        Get the source:
-        </p>
-        <p><code>$ git clone <a href="https://github.com/yesodweb/yesod">https://github.com/yesodweb/yesod.git</a></code></p>
-    </div>
-</section>
+<p class="what">Yesod is a Haskell web framework for productive development of type-safe, RESTful, high performance web applications.</p>
 
-<section>
-    <h2>Quick Links</h2>
+<section class="why">
+    <h2>Why Yesod</h2>
+    <dl>
+        <dt>Turn runtime bugs into compile-time errors</dt>
+        <dd>Yesod believes in the philosophy of making the compiler your ally, not your enemy. We use the type system to enforce as much as possible, from generating proper links, to avoiding XSS attacks, to dealing with character encoding issues. In general, if your code compiles, it works. And instead of declaring types everywhere you let the compiler figure them out for you with type inference.</dd>
+
+        <dt>Asynchronous made easy</dt>
+        <dd>The Haskell runtime is asynchronous automatically. Instead of dealing with callbacks, you get to write normal code. By utilizing light-weight green threads and event-based system calls, your code automatically becomes non-blocking, without the pain.</dd>
+
+        <dt>Scalable and Performant</dt>
+        <dd>Yesod lets you write simple, high-level code, and gives you good performance. But when you need more, you can tune your compiled code for something even faster. Many of Yesod’s base libraries work exactly this way: providing a nice, safe interface for users while getting near-C performance with direct memory access. The GHC compiler ensures we get fast machine code at the end of the day.</dd>
+
+        <dt>Light-weight syntax</dt>
+        <dd>A lot of web development is boilerplate. Setting up routing tables, creating database schemas, and dealing with forms can all be long, repetitive code. Yesod’s has simple DSLs for templating, persistence, routing, and much more. But more importantly the DSLs are correct: they are all compile-time checked to get rid of the runtime bugs.</dd>
+    </dl>
+
+    <p>Learn more on the <a href="/page/about">about page</a>.</p>
+</section>
+<section class="getting-started">
+    <h2>Getting started</h2>
+    <ul>
+        <li>Get ready with the <a href="/page/quickstart">quick start guide</a></li>
+        <li>Get motivated with the <a href="/page/screencasts">screencasts</a></li>
+        <li>Get an overview with the <a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
+        <li>Get informed with the <a href="/book">book</a></li>
+        <li>Get involved with the <a href="/page/community">community</a></li>
+    </ul>
     <div>
-        <ul>
-            <li><a href="/page/about">About: Why Yesod?</a></li>
-            <li><a href="/page/testimonials">Testimonials</a></li>
-            <li><a href="/page/screencasts">Screencasts</a></li>
-            <li><a href="/page/five-minutes">Get Started</a></li>
-            <li><a href="/page/community">Community resources</a></li>
-            <li><a href="/wiki/API%20Documentation">API Docs (Haddocks)</a></li>
-        </ul>
+        <a href="http://shop.oreilly.com/product/0636920023142.do">
+            <img src="http://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod">
+        </a>
     </div>
 </section>
