lowercase get started items

--- a/homepage.html
+++ b/homepage.html
@@ -21,11 +21,11 @@
 <section class="getting-started">
     <h2>Getting started</h2>
     <ul>
-        <li>Get ready with the <a href="/page/quickstart">quick start guide</a></li>
-        <li>Get motivated with the <a href="/page/screencasts">screencasts</a></li>
-        <li>Get an overview with the <a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
-        <li>Get informed with the <a href="/book">book</a></li>
-        <li>Get involved with the <a href="/page/community">community</a></li>
+        <li>get ready with the <a href="/page/quickstart">quick start guide</a></li>
+        <li>get motivated with the <a href="/page/screencasts">screencasts</a></li>
+        <li>get an overview with the <a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
+        <li>get informed with the <a href="/book">book</a></li>
+        <li>get involved with the <a href="/page/community">community</a></li>
     </ul>
     <div>
         <a href="http://shop.oreilly.com/product/0636920023142.do">
