remove get... fluff

--- a/homepage.html
+++ b/homepage.html
@@ -21,15 +21,13 @@
 <section class="getting-started">
     <h2>Getting started</h2>
     <ul>
-        <li>get ready with the <a href="/page/quickstart">quick start guide</a></li>
-        <li>get motivated with the <a href="/page/screencasts">screencasts</a></li>
-        <li>get an overview with the <a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
-        <li>get informed with the <a href="/book">book</a></li>
-        <li>get involved with the <a href="/page/community">community</a></li>
+        <li><a href="/page/quickstart">quick start guide</a></li>
+        <li><a href="/page/screencasts">screencasts</a></li>
+        <li><a href="/page/community">community</a></li>
+        <li><a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
+        <li><a href="/book">book</a></li>
     </ul>
-    <div>
-        <a href="http://shop.oreilly.com/product/0636920023142.do">
-            <img src="http://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod">
-        </a>
-    </div>
+    <a href="http://shop.oreilly.com/product/0636920023142.do">
+      <img src="http://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod" >
+    </a>
 </section>
