--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
         <dd>A lot of web development is boilerplate. Setting up routing tables, creating database schemas, and dealing with forms can all be long, repetitive code. Yesod’s has simple DSLs for templating, persistence, routing, and much more. But more importantly the DSLs are correct: they are all compile-time checked to get rid of the runtime bugs.</dd>
     </dl>
 
-    <p>Learn more on the <a href="/page/about">about page</a>.</p>
+    <p id="learn-more"><a href="/page/about">Learn More</a>.</p>
 </section>
 <section class="getting-started">
     <h2>Getting started</h2>
