--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <p class="what">Yesod is a Haskell web framework for productive development of type-safe, RESTful, high performance web applications.</p>
 
 <section class="why">
-    <h2>Why Yesod</h2>
+    <h2>Why Yesod?</h2>
     <dl>
         <dt>Turn runtime bugs into compile-time errors</dt>
         <dd>Yesod believes in the philosophy of making the compiler your ally, not your enemy. We use the type system to enforce as much as possible, from generating proper links, to avoiding XSS attacks, to dealing with character encoding issues. In general, if your code compiles, it works. And instead of declaring types everywhere you let the compiler figure them out for you with type inference.</dd>
