Link to Yann's blog post

--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,11 @@
         <dd>A lot of web development is boilerplate. Setting up routing tables, creating database schemas, and dealing with forms can all be long, repetitive code. Yesod’s has simple DSLs for templating, persistence, routing, and much more. But more importantly the DSLs are correct: they are all compile-time checked to get rid of the runtime bugs.</dd>
     </dl>
 
-    <p id="learn-more"><a href="/page/about">Learn More</a>.</p>
+    <p id="learn-more">
+        <a href="http://yannesposito.com/Scratch/en/blog/Yesod-excellent-ideas/">Learn more</a>.
+        or
+        <a href="/page/quickstart">get started</a>.
+    </p>
 </section>
 <section class="getting-started">
     <h2>Getting started</h2>
