Remove some punctuation

--- a/homepage.html
+++ b/homepage.html
@@ -17,9 +17,9 @@
     </dl>
 
     <p id="learn-more">
-        <a href="http://yannesposito.com/Scratch/en/blog/Yesod-excellent-ideas/">Learn more</a>.
+        <a href="http://yannesposito.com/Scratch/en/blog/Yesod-excellent-ideas/">Learn more</a>
         or
-        <a href="/page/quickstart">get started</a>.
+        <a href="/page/quickstart">get started</a>
     </p>
 </section>
 <section class="getting-started">
