--- a/homepage.html
+++ b/homepage.html
@@ -32,6 +32,11 @@
         <li><a href="http://yannesposito.com/Scratch/en/blog/Yesod-tutorial-for-newbies/">tutorial</a></li>
         <li><a href="/book">book</a></li>
     </ul>
+
+    <h2>Pronunciation</h2>
+    <p style="margin-right:20px"><a href="http://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/je'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">י&#x05b0;סו&#x05ba;ד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
+
+    <h2>Book</h2>
     <a href="http://shop.oreilly.com/product/0636920023142.do">
       <img src="http://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod" >
     </a>
