--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
     </ul>
 
     <h2>Pronunciation</h2>
-    <p style="margin-right:20px"><a href="http://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/je'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">י&#x05b0;סו&#x05ba;ד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
+    <p style="margin-right:20px"><a href="http://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/j&#618;'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">י&#x05b0;סו&#x05ba;ד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
 
     <h2>Book</h2>
     <a href="http://shop.oreilly.com/product/0636920023142.do">
