Include some links

--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
         <dd>Yesod believes in the philosophy of making the compiler your ally, not your enemy. We use the type system to enforce as much as possible, from generating proper links, to avoiding XSS attacks, to dealing with character encoding issues. In general, if your code compiles, it works. And instead of declaring types everywhere you let the compiler figure them out for you with type inference.</dd>
 
         <dt>Asynchronous made easy</dt>
-        <dd>The Haskell runtime is asynchronous automatically. Instead of dealing with callbacks, you get to write normal code. By utilizing light-weight green threads and event-based system calls, your code automatically becomes non-blocking, without the pain.</dd>
+        <dd>The <a href="https://haskell-lang.org">Haskell</a> runtime is asynchronous automatically. Instead of dealing with callbacks, you get to write normal code. By utilizing light-weight green threads and event-based system calls, your code automatically becomes non-blocking, without the pain.</dd>
 
         <dt>Scalable and Performant</dt>
         <dd>Yesod lets you write simple, high-level code, and gives you good performance. But when you need more, you can tune your compiled code for something even faster. Many of Yesod’s base libraries work exactly this way: providing a nice, safe interface for users while getting near-C performance with direct memory access. The GHC compiler ensures we get fast machine code at the end of the day.</dd>
@@ -19,7 +19,8 @@
     <p id="learn-more">
         <a href="http://yannesposito.com/Scratch/en/blog/Yesod-excellent-ideas/">Learn more</a>
         or
-        <a href="/page/quickstart">get started</a>
+        <a href="/page/quickstart">get started</a>.
+        You can also <a href="https://haskell-lang.org">learn more about Haskell</a>.
     </p>
 </section>
 <section class="getting-started">
