Fix some URLs and some Hebrew

--- a/homepage.html
+++ b/homepage.html
@@ -35,10 +35,10 @@
     </ul>
 
     <h2>Pronunciation</h2>
-    <p style="margin-right:20px"><a href="http://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/j&#618;'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">י&#x05b0;סו&#x05ba;ד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
+    <p style="margin-right:20px"><a href="https://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/j&#618;'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">יסוד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
 
     <h2>Book</h2>
-    <a href="http://shop.oreilly.com/product/0636920023142.do">
-      <img src="http://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod" >
+    <a href="https://shop.oreilly.com/product/0636920023142.do">
+      <img src="https://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod" >
     </a>
 </section>
