--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
     <p style="margin-right:20px"><a href="https://en.wikipedia.org/wiki/Wikipedia:IPA_for_Hebrew">/j&#618;'sod/</a> <a style="text-decoration:none" href="http://en.wikipedia.org/wiki/Hebrew_alphabet">יסוד</a>. <i>yi</i> as in <i>yip</i>, <i>sod</i> as in <i>soda</i>, stress on <i>sod</i>.
 
     <h2>Book</h2>
-    <a href="https://shop.oreilly.com/product/0636920023142.do">
-      <img src="https://akamaicovers.oreilly.com/images/0636920023142/cat.gif" alt="Developing Web Applications with Haskell and Yesod" >
+    <a href="http://shop.oreilly.com/product/0636920035664.do">
+      <img src="https://covers.oreillystatic.com/images/0636920035664/cat.gif" alt="Developing Web Apps with Haskell and Yesod" >
     </a>
 </section>
